# hayai

./: Cargo.toml  README.md
examples/hayai-example/: Cargo.toml
examples/hayai-example/src/: main.rs
hayai/: Cargo.toml
hayai-macros/: Cargo.toml
hayai-macros/src/: lib.rs
hayai/src/: lib.rs  openapi.rs
hayai/tests/: auth_e2e_tests.rs  e2e_tests.rs  integration_tests.rs  lifespan_tests.rs  nested_complex_tests.rs
