[package]
name = "hayai"
version = "0.1.0"
edition = "2021"

[dependencies]
hayai-macros = { path = "../hayai-macros" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
inventory = "0.3"
regex = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
