[package]
name = "hayai"
version = "0.1.0"
edition = "2021"
description = "A FastAPI-inspired web framework for Rust with OpenAPI support"
license = "MIT"
repository = "https://github.com/9ro-dev/hayai"
keywords = ["axum", "fastapi", "openapi", "web", "async", "swagger"]
categories = ["asynchronous", "web-programming", "api-bindings"]

[dependencies]
hayai-macros = { path = "../hayai-macros" }
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
inventory = "0.3"
regex = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
